export enum DayOfWeek {
  Thursday,
  Saturday,
  Tuesday,
  Friday,
  Monday,
  Wednesday,
  PublicHolidays,
  Sunday,
}
