

export class Duration extends Quantity {


}
