classDiagram
  Schedule -- dateTime
  Schedule -- date
  Schedule -- time
  Schedule -- Duration
  Schedule -- DayOfWeek


class Schedule {

  string scheduleTimezone
  dateTime startDate
  date startDate
  dateTime exceptDate
  date exceptDate
  dateTime startTime
  time startTime
  number repeatCount
  date endDate
  dateTime endDate
  string repeatFrequency
  Duration repeatFrequency
  Duration duration
  number byMonthDay
  dateTime endTime
  time endTime
  number byMonth
  DayOfWeek byDay
  string byDay
  number byMonthWeek

 }
